--- a/praktek.html
+++ b/praktek.html
@@ -1,1 +1,9 @@
-hello word 
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Example</title>
+    </head>
+    <body>
+        <p>HELLO WORLD</p>
+    </body>
+</html>
