--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     </head>
     <body>
         <p>HELLO WORLD</p>
-        <p> wenda berutu (215314190)</p>
+        <p> wenda berutu</p>
+        <p>(215314190)</p>
     </body>
 </html>
