--- a/index.html
+++ b/index.html
@@ -1,11 +1,55 @@
-<!DOCTYPE html>
 <html>
-    <head>
-        <title>Example</title>
-    </head>
-    <body>
-        <p>HELLO WORLD</p>
-        <p> wenda berutu</p>
-        <p>(215314190)</p>
-    </body>
+<head>
+	<title>Biodata Wenda berutu </title>
+	<style>
+	 img{
+	 border-radius : 80%;
+	 } 
+	</style>
+</head>
+
+   <body background="gambarku.jpg">
+	<HR><h1 align= "center"> BIODATA DIRI </h1></HR>
+	<HR></HR>
+	<BR></BR>
+	<center><img src="wendacans.jpeg" width="350"></center>
+	<BR></BR>
+	<center><h2> DATA DIRI </h2> </Center>
+<table style="width:1020" border ="1" cellpadding="4" align="center"  cellspacing="0">
+	<tr>
+		<th  align="left"> Nama </th>
+		<th align="left"> WENDA BERUTU </th>
+	</tr>
+	<tr>
+		<th align="left"> Tempat, tanggal lahir </th>
+		<th align="left"> BANDUNG, 25 JULI 2002 </th>
+	</tr>
+	<tr>
+		<th align="left"> Jenis kelamin </th>
+		<th align="left"> PEREMPUAN </th>
+	</tr>
+	<tr>
+		<th align="left"> Agama </th>
+		<th align="left"> KRISTEN PROTESTAN </th>
+	</tr>
+</table>
+
+	<center><h2> KONTAK &amp; SOSIAL MEDIA</h2></center>
+<table style="width:1020" border ="1" cellpadding="4" align="center"  cellspacing="0">
+	<tr>
+		<th  align="left"> nomor handphone </th>
+		<th  align="left"> 082273500223</th>
+	</tr>
+		<th  align="left"> Email </th>
+		<th  align="left"> wendaberutu07@gmail.com </th>
+	</tr>
+	<tr>
+		<th  align="left"> Facebook </th>
+		<th  align="left"><a href ="https://www.facebook.com/wendaberutu01?mibextid=ZbWKwL"> ini linknya </a></th> 
+	</tr>
+	<tr>
+	
+
+
+ </body>
 </html>
