--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 		<th  align="left"><a href ="https://www.facebook.com/wendaberutu01?mibextid=ZbWKwL"> ini linknya </a></th> 
 	</tr>
 	<tr>
-	
+		<th align ="left"> Instagram </ht>
+		<th align ="left"><a href="https://instagram.com/wendaberutu2?igshid=YmMyMTA2M2Y="> @wendaberutu2 </a> </th>
+	</tr>
 
 
  </body>
