--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 	</tr>
 	<tr>
 		<th align ="left"> Instagram </ht>
-		<th align ="left"><a href="https://instagram.com/wendaberutu2?igshid=YmMyMTA2M2Y="> @wendaberutu2 </a> </th>
+		<th align ="left"><a href="https://instagram.com/wendaberutu2?igshid=YmMyMTA2M2Y="> ig @wendaberutu2 </a> </th>
 	</tr>
 
 
