membuat judul baru

--- a/index.html
+++ b/index.html
@@ -50,6 +50,10 @@
 		<th align ="left"> Instagram </ht>
 		<th align ="left"><a href="https://instagram.com/wendaberutu2?igshid=YmMyMTA2M2Y="> ig @wendaberutu2 </a> </th>
 	</tr>
+</table>
+	<center><h2> &#128151 MY STORY &#128151 </center></h2> 
+
+
 
 
  </body>
