membuat tabel dan isi my story

--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
 	</tr>
 </table>
 	<center><h2> &#128151 MY STORY &#128151 </center></h2> 
-
+	<p> Hobi saya adalah travel jadi di my story ini akan saya perlihatkan kemana saja saya sudah pergi dan saya juga sangat suka \n
+		ke pantai </> 
+<table style="width:100%" border: "1px solid black" border-radius:"10px">
 
 
 
