--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 </table>
 	<center><h2> &#128151 MY STORY &#128151 </center></h2> 
 	<center><p> Hobi saya adalah travel jadi di my story ini akan saya perlihatkan kemana saja saya sudah pergi </p></center> 
-<table style="width:100%" border:"1px solid black" border-radius: 10px>
+<table style="width:100%" border:"1" border-radius : 80% align="center"  >
 	<tr style="background-color:DodgerBlue;"> DANAU TOBA </tr> 	
 </table> 
 
