menambahkan foto foto

--- a/index.html
+++ b/index.html
@@ -53,11 +53,29 @@
 </table>
 	<center><h2> &#128151 MY STORY &#128151 </center></h2> 
 	<center><p> Hobi saya adalah travel jadi di my story ini akan saya perlihatkan kemana saja saya sudah pergi </p></center> 
-<table style="width:100%" border:"1" border-radius : 80% align="center"  >
-	<tr style="background-color:DodgerBlue;"> DANAU TOBA </tr> 	
+<table style="width:900" border ="1" align="center" style=border-radius: 10px>
+	<tr> 
+		<th style="background-color:DodgerBlue;" align="center"> DANAU TOBA </th>
+	</tr> 	
 </table> 
-
-
-
+<table style="width:900" align="center">
+	<tr> 
+		<th><img src= danau1.jpeg width="400"> </th>
+		<th> ini adalah foto saya ketika berada disilalahi dan ini di hotel debag resort view nya sangat cantik </th>
+	</tr>
+	<tr>
+		<th> ini foto saya ketika berada di airterjun nama air terjunnya aadalah efrata yang memiliki ketinggian sekitar 20 meter yang teretak di daerah samosir </th>
+		<th><img src= danau2.jpeg width="400"> </th>
+	</tr>
+	<tr>
+		<th><img src= danau3.jpeg width="450"> </th>
+		<th> dan ini adalah foto saya ketika berada di pantai yang namanya pasir putih dan ini masih berada pada kawasan samosir. 
+		tempat yang biasa di kunjungi cocok untuk liburan keluarga </th>
+	</tr>
+	<tr>
+		<th>nah kalau ini adalah foto di siantar tetangga dari samosir, ini adalah kebun teh yang paling terkenal. aku pergi bareng sepupu dan temen aku
+			biasa lah anak muda wkwkwk</th> 
+		<th><img src= danau4.jpeg width="400"> </th>
+		
  </body>
 </html>
