--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 	 } 
 	</style>
 </head>
-   <body background="gambar\gambarku.jpg">
+   <body background="gambar/gambarku.jpg">
 	<HR><h1 align= "center"> BIODATA DIRI </h1></HR>
 	<HR></HR>
 	<BR></BR>
-	<center><img src="gambar\wendacans.jpeg" width="350"></center>
+	<center><img src="gambar/wendacans.jpeg" width="350"></center>
 	<BR></BR>
 	<center><h2> DATA DIRI </h2> </Center>
 <table style="width:1020" border ="1" cellpadding="4" align="center"  cellspacing="0">
@@ -60,22 +60,22 @@
 </table> 
 <table style="width:900" align="center">
 	<tr> 
-		<th><img src= gambar\danau1.jpeg width="400"> </th>
+		<th><img src= gambar/danau1.jpeg width="400"> </th>
 		<th> ini adalah foto saya ketika berada disilalahi dan ini di hotel debag resort view nya sangat cantik </th>
 	</tr>
 	<tr>
 		<th> ini foto saya ketika berada di airterjun nama air terjunnya aadalah efrata yang memiliki ketinggian sekitar 20 meter yang teretak di daerah samosir </th>
-		<th><img src= gambar\danau2.jpeg width="400"> </th>
+		<th><img src= gambar/danau2.jpeg width="400"> </th>
 	</tr>
 	<tr>
-		<th><img src= gambar\danau3.jpeg width="450"> </th>
+		<th><img src= gambar/danau3.jpeg width="450"> </th>
 		<th> dan ini adalah foto saya ketika berada di pantai yang namanya pasir putih dan ini masih berada pada kawasan samosir. 
 		tempat yang biasa di kunjungi cocok untuk liburan keluarga </th>
 	</tr>
 	<tr>
 		<th>nah kalau ini adalah foto di siantar tetangga dari samosir, ini adalah kebun teh yang paling terkenal. aku pergi bareng sepupu dan temen aku
 			biasa lah anak muda wkwkwk</th> 
-		<th><img src= gambar\danau4.jpeg width="400"> </th>
+		<th><img src= gambar/danau4.jpeg width="400"> </th>
 		
  </body>
 </html>
