--- a/index.html
+++ b/index.html
@@ -1,81 +1,77 @@
 <html>
 <head>
 	<title>Biodata Wenda berutu </title>
-	<style>
-	 img{
-	 border-radius : 80%;
-	 } 
-	</style>
+	<link href="style.css" rel="stylesheet">
 </head>
-   <body background="gambar/gambarku.jpg">
-	<HR><h1 align= "center"> BIODATA DIRI </h1></HR>
+   <body>
+	<HR><h1> BIODATA DIRI </h1></HR>
 	<HR></HR>
 	<BR></BR>
-	<center><img src="gambar/wendacans.jpeg" width="350"></center>
+	<center><img src="wendacans.jpeg" width="350"></center>
 	<BR></BR>
 	<center><h2> DATA DIRI </h2> </Center>
-<table style="width:1020" border ="1" cellpadding="4" align="center"  cellspacing="0">
+<table>
 	<tr>
-		<th  align="left"> Nama </th>
-		<th align="left"> WENDA BERUTU </th>
+		<th> Nama </th>
+		<th > WENDA BERUTU </th>
 	</tr>
 	<tr>
-		<th align="left"> Tempat, tanggal lahir </th>
-		<th align="left"> BANDUNG, 25 JULI 2002 </th>
+		<th> Tempat, tanggal lahir </th>
+		<th> BANDUNG, 25 JULI 2002 </th>
 	</tr>
 	<tr>
-		<th align="left"> Jenis kelamin </th>
-		<th align="left"> PEREMPUAN </th>
+		<th> Jenis kelamin </th>
+		<th > PEREMPUAN </th>
 	</tr>
 	<tr>
-		<th align="left"> Agama </th>
-		<th align="left"> KRISTEN PROTESTAN </th>
+		<th> Agama </th>
+		<th> KRISTEN PROTESTAN </th>
 	</tr>
 </table>
 
 	<center><h2> KONTAK &amp; SOSIAL MEDIA</h2></center>
-<table style="width:1020" border ="1" cellpadding="4" align="center"  cellspacing="0">
+<table>
 	<tr>
-		<th  align="left"> nomor handphone </th>
-		<th  align="left"> 082273500223</th>
+		<th> nomor handphone </th>
+		<th> 082273500223</th>
 	</tr>
-		<th  align="left"> Email </th>
-		<th  align="left"> wendaberutu07@gmail.com </th>
-	</tr>
-	<tr>
-		<th  align="left"> Facebook </th>
-		<th  align="left"><a href ="https://www.facebook.com/wendaberutu01?mibextid=ZbWKwL"> ini linknya </a></th> 
+		<th> Email </th>
+		<th> wendaberutu07@gmail.com </th>
 	</tr>
 	<tr>
-		<th align ="left"> Instagram </ht>
-		<th align ="left"><a href="https://instagram.com/wendaberutu2?igshid=YmMyMTA2M2Y="> ig @wendaberutu2 </a> </th>
+		<th> Facebook </th>
+		<th ><a href ="https://www.facebook.com/wendaberutu01?mibextid=ZbWKwL"> ini linknya </a></th> 
+	</tr>
+	<tr>
+		<th> Instagram </ht>
+		<th><a href="https://instagram.com/wendaberutu2?igshid=YmMyMTA2M2Y="> ig @wendaberutu2 </a> </th>
 	</tr>
 </table>
 	<center><h2> &#128151 MY STORY &#128151 </center></h2> 
 	<center><p> Hobi saya adalah travel jadi di my story ini akan saya perlihatkan kemana saja saya sudah pergi </p></center> 
-<table style="width:900" border ="1" align="center" style=border-radius: 10px>
+<table>
 	<tr> 
-		<th style="background-color:DodgerBlue;" align="center"> DANAU TOBA </th>
+		<th  style="background-color:DodgerBlue;" align="center"> DANAU TOBA </th>
 	</tr> 	
 </table> 
-<table style="width:900" align="center">
+<table>
 	<tr> 
-		<th><img src= gambar/danau1.jpeg width="400"> </th>
+		<th><img src= danau1.jpeg width="400"> </th>
 		<th> ini adalah foto saya ketika berada disilalahi dan ini di hotel debag resort view nya sangat cantik </th>
 	</tr>
 	<tr>
 		<th> ini foto saya ketika berada di airterjun nama air terjunnya aadalah efrata yang memiliki ketinggian sekitar 20 meter yang teretak di daerah samosir </th>
-		<th><img src= gambar/danau2.jpeg width="400"> </th>
+		<th><img src= danau2.jpeg width="400"> </th>
 	</tr>
 	<tr>
-		<th><img src= gambar/danau3.jpeg width="450"> </th>
+		<th><img src= danau3.jpeg width="450"> </th>
 		<th> dan ini adalah foto saya ketika berada di pantai yang namanya pasir putih dan ini masih berada pada kawasan samosir. 
 		tempat yang biasa di kunjungi cocok untuk liburan keluarga </th>
 	</tr>
 	<tr>
 		<th>nah kalau ini adalah foto di siantar tetangga dari samosir, ini adalah kebun teh yang paling terkenal. aku pergi bareng sepupu dan temen aku
 			biasa lah anak muda wkwkwk</th> 
-		<th><img src= gambar/danau4.jpeg width="400"> </th>
-		
+		<th><img src= danau4.jpeg width="400"> </th>
+
  </body>
 </html>
